--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,36 +1,26 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "module": "esnext",
-    "allowJs": true,
-    "checkJs": false,
-    "jsx": "react-jsx",
-    "strict": true,
-    "esModuleInterop": true,
     "lib": [
       "dom",
       "dom.iterable",
       "esnext"
     ],
+    "allowJs": true,
     "skipLibCheck": true,
+    "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
+    "strict": true,
     "forceConsistentCasingInFileNames": true,
+    "noFallthroughCasesInSwitch": true,
+    "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "noEmit": true,
     "isolatedModules": true,
-    "noImplicitAny": false,
-    "baseUrl": "src",
-    "noFallthroughCasesInSwitch": true
+    "noEmit": true,
+    "jsx": "react-jsx"
   },
-  "exclude": [
-    "./node-modules/*"
-  ],
   "include": [
-    "./src/**/*"
-  ],
-  "typeRoots": [
-    "./node_modules/@types",
-    "./@types"
+    "src"
   ]
 }
